-- Categories and product-category mapping

CREATE TABLE categories (
    id bigint GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    name varchar(255) NOT NULL,
    slug varchar(255) UNIQUE,
    description text,
    parent_id bigint,
    active boolean DEFAULT true,
    created_by varchar(100),
    created_at timestamp DEFAULT CURRENT_TIMESTAMP,
    updated_at timestamp DEFAULT CURRENT_TIMESTAMP,
    CONSTRAINT fk_category_parent FOREIGN KEY (parent_id) REFERENCES categories(id)
);

CREATE TABLE product_category_map (
    id bigint GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    product_id bigint NOT NULL,
    category_id bigint NOT NULL,
    CONSTRAINT fk_pcm_product FOREIGN KEY (product_id) REFERENCES products(id),
    CONSTRAINT fk_pcm_category FOREIGN KEY (category_id) REFERENCES categories(id),
    CONSTRAINT uc_product_category UNIQUE (product_id, category_id)
);
